Deployment-infinite.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: mydinfiniteshop
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy to infinite"
spec: 
  minReadySeconds: 5
  replicas: 6
  selector:
    matchLabels:
      app: infinite-app
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%  
  template:
    metadata:
      name: myinfinitepods
      labels:
        app: infinite-app
    spec:
      containers:
        - name: myinfinite-contianers 
          image: 837402981397.dkr.ecr.us-east-1.amazonaws.com/dev/images:infinite
          ports:
            - containerPort: 80
          imagePullPolicy: Always
