Service-slideshow.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: mysvcdp-slideshow
  namespace: prod
spec: 
  type: ClusterIP
  selector:
      app: slideshow-app
  ports:
    - port: 80
